--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://codesensei-dev.github.io/insta-portfolio",
+  "homepage": "https://codesensei-dev.github.io/",
   "name": "insta-portfolio",
   "version": "0.1.0",
   "private": true,
